Run Perfmonkey tests on http://www.cnn.com

--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://www.cnn.com","creator":"http://perfmonkey.com","rand":0.4279157791752368,"created_at":"2014-07-09T22:20:30.173Z"}
