--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"website":"http://www.cnn.com","creator":"http://perfmonkey.com","rand":0.4279157791752368,"created_at":"2014-07-09T22:20:30.173Z"}
+{"website":"https://www.amazon.com/gp/dmusic/device/mp3/store/home?device=apollo_alpha","creator":"http://perfmonkey.com","rand":0.09039518609642982,"created_at":"2014-07-09T22:33:20.896Z"}
